# dungeon-keeper

./: .coverage  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  CLAUDE.md  README.md  app_context.py  bios_cog_spec.md  config.py  dashboard.py  db_utils.py  dungeon_keeper_jail_ticket_spec.md  dungeonkeeper.py  id_remap.py  package.json  post_monitoring.py  pyproject.toml  pyrightconfig.json  reports.py  requirements-dev.txt  requirements-local-llm.txt  requirements.txt  ruff.toml  rules_watch_cog.md  safety.py  scoring.py  settings.py  tasks.py  utils.py  xp_system.py
.github/: dependabot.yml
assets/: colors.txt
beta_tools/: __main__.py  ambient_sim.py  bot.py  config.py  db_gate.py  markov.py  personas.py  puppet_manager.py  safety.py  webhook_fleet.py
cogs/: activity_cog.py  ai_mod_cog.py  auto_delete_cog.py  birthday_cog.py  confessions_cog.py  config_cog.py  denizen_cog.py  dev_cog.py  dm_perms_cog.py  drama_cog.py  emoji_stealer_cog.py  events_cog.py  foolsday_cog.py  gender_cog.py  inactivity_prune_cog.py  interaction_cog.py  invite_cog.py  jail_cog.py  mod_cog.py  music_cog.py  privacy_cog.py  quote_cog.py  reports_cog.py  role_grant_cog.py  setup_cog.py  starboard_cog.py  support_cog.py  todo_cog.py  tts_cog.py  veil_cog.py  voice_master_cog.py  watch_cog.py  welcome_cog.py  wellness_admin_cog.py  wellness_cog.py  whisper_cog.py  xp_cog.py
commands/: activity_commands.py  ai_mod_commands.py  auto_delete_commands.py  config_commands.py  denizen_commands.py  drama_commands.py  foolsday_commands.py  gender_commands.py  give_role_commands.py  inactivity_prune_commands.py  interaction_commands.py  invite_commands.py  jail_commands.py  mod_commands.py  privacy_commands.py  role_grant_commands.py  spoiler_commands.py  voice_master_commands.py  watch_commands.py  welcome_commands.py  wellness_admin_commands.py  wellness_commands.py  xp_commands.py
core/: app_context.py  config.py  id_remap.py  post_monitoring.py  safety.py  scoring.py  xp_system.py
deploy/: README.md  discord-bots.target  dungeon-keeper-watchdog.service  dungeon-keeper.service
docs/: COMMAND_AUDIT.md  DEPLOYMENT.md  DUNGEON_KEEPER_TEST_ENV_SPEC.md  INDEX.md  MUSIC_COG_CLAUDE_CODE_SPEC.md  README.md  SIMPLIFICATION_AUDIT.md  TESTING_QUEUE.md  TGM-Dashboard-Concept-Spec.md  ai_moderation_spec.md  announcements.md  auto_delete_spec.md  auto_react_spec.md  auto_role_spec.md  beta_tools_spec.md  bios_cog_spec.md  birthday-announcement.md  birthday_spec.md  booster_roles_spec.md  bump_tracker_spec.md  casino_spec.md  chat_revive_spec.md  confessions_spec.md  dev_remote_testing.md  dk_pvp_games_suite_spec.md  dm_perms_spec.md  docs_cog_spec.md  duel_minigame_flows_v2.md  dungeon_keeper_jail_ticket_spec.md  economy_spec.md  embed_style_guide.md  emoji_stealer_spec.md  events_spec.md  games_system_spec.md  greeting_watch_spec.md  guess_spec.md  hidden_channels_spec.md  inactive_spec.md  intake_spec.md  mobile_layout_testing.md  (+33 more)
fixtures/: beta_puppets.yaml
handlers/: __init__.py  events.py
jail/: logic.py
lavalink/: .gitignore  application.yml
migrations/: 000_init.sql  001_id_remap.sql  003_birthdays.sql  006_music.sql  012_whisper.sql  014_whisper_reports.sql  016_veil_confession_columns.sql
scripts/: backfill_bot_messages.py  backfill_member_events.py  build_markov.py  dashboard.py  diff_db.py  economy_tuning_report.py  export_prod_snapshot.py  gate.py  import_bot_messages.py  migrate_legacy_bots.py  mobile_layout_scan.py  post_testing_docs.py  recompute_xp.py  refresh_dev_db.py  regression.sh  remote_test.py  restore_messages.py  rules_watch_backtest.py  rules_watch_features.py  rules_watch_model_swap.sh  rules_watch_seeds.json  rules_watch_tune.py  rules_watch_userweek.py  seed_quest_variety.py  setup_lavalink.py  watchdog.py
services/: activity_graphs.py  ai_config.py  ai_moderation_service.py  auto_delete_service.py  backfill_jobs.py  birthday_service.py  booster_roles.py  command_sync.py  confessions_service.py  db_backup.py  discord_scan.py  dm_perms_service.py  embeds.py  gender_service.py  graph_metrics.py  health_metrics.py  health_service.py  inactivity_prune_service.py  incident_detection.py  interaction_graph.py  invite_tracker.py  member_quality_score.py  message_store.py  message_xp_service.py  moderation.py  music_now_playing.py  music_queue.py  music_settings.py  name_resolver.py  privacy_service.py  quote_renderer.py  reports_data.py  sentiment_service.py  spotify_resolver.py  starboard_service.py  todo_service.py  tts_playback.py  veil_crop_renderer.py  veil_face_detector.py  veil_models.py  (+16 more)
src/: dungeonkeeper.py
tests/: conftest.py  fakes.py  test_activity_graphs.py  test_advisor_actions.py  test_advisor_context.py  test_advisor_gaps.py  test_advisor_service.py  test_app_context.py  test_attention_report.py  test_auto_delete_scheduling.py  test_auto_delete_service.py  test_auto_delete_startup.py  test_bios_logic.py  test_bios_trigger.py  test_birthday_service.py  test_booster_multiplier_wiring.py  test_branding_service.py  test_casino_embeds.py  test_casino_logic.py  test_casino_service.py  test_chat_revive_actions.py  test_chat_revive_cog.py  test_chat_revive_logic.py  test_chat_revive_loop.py  test_chat_revive_service.py  (+151 more)
(+1198 files in other folders)
