[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeonkeeper"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
dungeonkeeper = "dungeonkeeper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Run tests in parallel via pytest-xdist. Pass ``-n 0`` to disable for
# debugging a single test (the last -n on the command line wins).
addopts = "-n auto"

[tool.coverage.run]
# Required for --cov to work under pytest-xdist: each worker writes its own
# .coverage.* file and pytest-cov combines them at the end.
parallel = true
source = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/web/conftest.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false
reportMissingModuleSource = "none"
exclude = [
  "src/bot_modules/cogs/games_*",
  "src/bot_modules/cogs/games_legitlibs",
  "src/bot_modules/games",
]
