[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeonkeeper"
version = "0.1.0"
requires-python = ">=3.14"

[project.scripts]
dungeonkeeper = "dungeonkeeper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Run tests in parallel via pytest-xdist. Pass ``-n 0`` to disable for
# debugging a single test (the last -n on the command line wins).
addopts = "-n auto"

[tool.coverage.run]
# Required for --cov to work under pytest-xdist: each worker writes its own
# .coverage.* file and pytest-cov combines them at the end.
parallel = true
source = ["src"]

[tool.coverage.report]
# Regression floor, set just under the measured 50% (2026-07-02, 4316 tests).
# Raise it as coverage grows; don't lower it to make a failing build pass.
fail_under = 49

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/web/conftest.py" = ["E402"]
# Section-organized test: imports intentionally grouped with their test block.
"tests/test_games_ffa_logic.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false
reportMissingModuleSource = "none"
ignore = []
